test/fixtures/type-error/notExhaustiveMatch.ro
type color {
  Red
  Green
  Blue
}


fun test(x: color): color =
  x match {
    // there MUST be an error here ^^^^


    case is Red -> Red
    case is Green -> Green
  }

fun test1(x: color): color =
  x match {
    // there MUST NOT be error here ^^^^


    case is Red -> Red
    case is Green -> Green
    case is Blue -> Blue
  }

fun test3(x: color): color =
  x match {
    // there MUST NOT be error here ^^^^


    case is Red -> Red
    else -> Blue
  }